更新.gitignore：排除临时结果文件和上传文件

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,11 @@ tmp/
 *.phr
 *.pin
 *.psq
+
+# Upload and result files
+uploads/
+results/
+*.zip
+
+# Example files (keep inputexample, but ignore output)
+outputexcel/
