Dockerfile优化：将ChromeDriver打包进镜像，支持完全离线部署

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,10 @@ outputexcel/
 
 # Windows packaging
 LocalBlast_Windows*/
+LocalBlast_Windows_Installer*/
+
+# PyInstaller
+build/
+dist/
+*.spec
+*.exe
