--- a/.dockerignore
+++ b/.dockerignore
@@ -59,6 +59,9 @@ Dockerfile
 docker-compose.yml
 .dockerignore
 
+# ChromeDriver相关（保留zip文件用于构建）
+chromedriver-linux64/
+
 # 其他
 node_modules/
 .npm/
